@@ -92,7 +92,7 @@ if (defined($params{'mode'})) {
     my $count = violation_count($mac);
 
     if ($count == 0) {
-      if ($Config{'network'}{'mode'} =~ /passive/i) {
+      if ($Config{'network'}{'mode'} =~ /arp/i) {
         my $cmd = $install_dir."/bin/pfcmd manage freemac $mac";
         my $output = qx/$cmd/;
       }
