@@ -111,13 +111,13 @@ EOT
 
 [network.mode]
 type=toggle
-options=dhcp|passive|vlan
+options=arp|dhcp|vlan
 description=<<EOT
 Defines the mode in which PacketFence will operate.
 
-When deployed in passive mode, PacketFence uses ARP manipulation inject itself into the datastream of unregistered or 
+When deployed in arp mode, PacketFence uses ARP manipulation inject itself into the datastream of unregistered or 
 trapped nodes.  You can read more about the mechanics of ARP manipulation <a 
-href="http://www.packetfence.org/dokuwiki/doku.php?id=faq#what_is_arp_manipulation_aka_poisoning_or_spoofing">here</a>. The major failing of passive mode is that 
+href="http://www.packetfence.org/dokuwiki/doku.php?id=faq#what_is_arp_manipulation_aka_poisoning_or_spoofing">here</a>. The major failing of arp mode is that 
 it's not 100% in catching all traffic - spurious packets can and will occasionaly get through. 
 EOT
 
@@ -149,7 +149,7 @@ noticed issues with the local nameserver refusing to answer queries in some case
 netfilter connection tracking.
 
 If you're running DHCP locally, though, it may make sense to run a nameserver locally as well rather than defining external 
-servers to passthrough.  Not that running either DHCP or DNS on a passive deployed PF system establishes dependencies on it 
+servers to passthrough.  Not that running either DHCP or DNS on a arp deployed PF system establishes dependencies on it 
 that are likely not wanted.
 EOT
 
@@ -272,7 +272,7 @@ EOT
 type=time
 description=<<EOT
 How long to display the progress bar during trap release.  Setting it to a value of 5 or higher is recommended 
-when in passive mode.  Doing so allows the client time to receive and process the redirection ARP sent by PacketFence.
+when in arp mode.  Doing so allows the client time to receive and process the redirection ARP sent by PacketFence.
 EOT
 
 [trapping.blacklist]
@@ -346,7 +346,7 @@ EOT
 [registration.queuesize]
 type=numeric
 description=<<EOT
-Useful for passive deployments on very large networks, this defines the number of nodes that PacketFence 
+Useful for arp deployments on very large networks, this defines the number of nodes that PacketFence 
 will simultaneously trap for registration (trappings due to violation always occur).  If set to 0, this queue is disabled. 
 EOT
 
