@@ -21,13 +21,13 @@ If enabled PacketFence will monitor DHCP option82 location-based information.
 This feature is only available if the dhcpdetector is activated.<p>
 <a name=mode></a>
 <b>mode</b> <i>(toggle)</i><br>
-Default: passive<br>
-Options: dhcp|passive|vlan<br>
+Default: arp<br>
+Options: arp|dhcp|vlan<br>
 Defines the mode in which PacketFence will operate.
 <p>
-When deployed in passive mode, PacketFence uses ARP manipulation inject itself into the datastream of unregistered or 
+When deployed in arp mode, PacketFence uses ARP manipulation inject itself into the datastream of unregistered or 
 trapped nodes.  You can read more about the mechanics of ARP manipulation <a 
-href="http://www.packetfence.org/dokuwiki/doku.php?id=faq#what_is_arp_manipulation_aka_poisoning_or_spoofing">here</a>. The major failing of passive mode is that 
+href="http://www.packetfence.org/dokuwiki/doku.php?id=faq#what_is_arp_manipulation_aka_poisoning_or_spoofing">here</a>. The major failing of arp mode is that 
 it's not 100% in catching all traffic - spurious packets can and will occasionaly get through.<p>
 <a name=named></a>
 <b>named</b> <i>(toggle)</i><br>
@@ -40,7 +40,7 @@ noticed issues with the local nameserver refusing to answer queries in some case
 netfilter connection tracking.
 <p>
 If you're running DHCP locally, though, it may make sense to run a nameserver locally as well rather than defining external 
-servers to passthrough.  Note that running either DHCP or DNS on a passive deployed PF system establishes dependencies on it 
+servers to passthrough.  Note that running either DHCP or DNS on a arp deployed PF system establishes dependencies on it 
 that are likely not wanted.<p>
 <a name=rogueinterval></a>
 <b>rogueinterval</b> <i>(numeric)</i><br>
