@@ -51,7 +51,7 @@ The number of registration pages to show to the user.<p>
 <a name=queuesize></a>
 <b>queuesize</b> <i>(numeric)</i><br>
 Default: 0<br>
-Useful for passive deployments on very large networks, this defines the number of nodes that PacketFence 
+Useful for arp deployments on very large networks, this defines the number of nodes that PacketFence 
 will simultaneously trap for registration (trappings due to violation always occur).  If set to 0, this queue is disabled. <p>
 <a name=range></a>
 <b>range</b> <i>(text)</i><br>
