@@ -52,7 +52,7 @@ defined.<p>
 <b>redirtimer</b> <i>(time)</i><br>
 Default: 10s<br>
 How long to display the progress bar during trap release.  Setting it to a value of 5 or higher is recommended 
-when in passive mode.  Doing so allows the client time to receive and process the redirection ARP sent by PacketFence.<p>
+when in arp mode.  Doing so allows the client time to receive and process the redirection ARP sent by PacketFence.<p>
 <a name=registration></a>
 <b>registration</b> <i>(toggle)</i><br>
 Default: disabled<br>
