@@ -61,6 +61,8 @@
           (http://www.packetfence.org/mantis/view.php?id=436)
         network.vlan becomes network.mode=vlan
           (http://www.packetfence.org/mantis/view.php?id=437)
+        network.mode=passive becomes network.mode=arp
+          (http://www.packetfence.org/mantis/view.php?id=438)
 
 1.7.4
         undef operator in SNMP.pm
